add identity context

--- a/Globomantics.Survey/appsettings.Development.json
+++ b/Globomantics.Survey/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "GloboSurveyDbConnectionString": "Data Source=GloboSurvey.db"
+    "GloboSurveyDbConnectionString": "Data Source=GloboSurvey.db",
+    "GloboIdentityDbConnectionString": "Data Source=GloboIdentity.db"
   }
 }
