--- a/Globomantics.Survey/appsettings.json
+++ b/Globomantics.Survey/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GloboSurveyDbConnectionString": "Data Source=GloboSurvey.db",
+    //"GloboIdentityDbConnectionString": "Data Source=GloboIdentity.db"
+  }
 }
+
