--- a/Globomantics.Survey/appsettings.json
+++ b/Globomantics.Survey/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GloboSurveyDbConnectionString": "Data Source=GloboSurvey.db",
-    //"GloboIdentityDbConnectionString": "Data Source=GloboIdentity.db"
+    "GloboIdentityDbConnectionString": "Data Source=GloboIdentity.db"
   }
 }
 
