--- a/Globomantics.Survey/appsettings.json
+++ b/Globomantics.Survey/appsettings.json
@@ -7,8 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GloboSurveyDbConnectionString": "Data Source=GloboSurvey.db",
-    "GloboIdentityDbConnectionString": "Data Source=GloboIdentity.db"
+    "IdentityDbContextConnection": "Data Source=Globomantics.Survey.db"
   }
 }
-
